--- a/webClient/src/index.config.html
+++ b/webClient/src/index.config.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Webclient</title>
-  <base href="/">
+  <base href="${BASE_HREF}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -16,7 +16,7 @@
       document.addEventListener(
         "DOMContentLoaded",
         function (event) {
-          window.setConfig({});
+          window.setConfig(${AppConfig});
           delete window.setConfig;
         });
     })();
